Fix suggestion view text wrapping

--- a/style.css
+++ b/style.css
@@ -495,6 +495,10 @@ button {
   overflow: hidden;
 }
 
+.video-suggestion-views span {
+  white-space: nowrap;
+}
+
 .video-suggestion-new-badge {
   width: min-content;
   padding: 3px 4px;
